# printd

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  deployment.md  printers.md
examples/: client.py  client.ts  curl.sh  demo.py
src/printd/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  connectors.py  escpos_session.py  image_pipeline.py  models.py
tests/: conftest.py  test_auth.py  test_cut_feed.py  test_image_pipeline.py  test_print_route.py  test_status.py
